@@ -68,6 +68,7 @@ func (s *Server) setupRouter() {
 	r.HandleFunc("/assignGlobalModerator", responder(s.assignGlobalModerator))
 	r.HandleFunc("/assignAdmin", responder(s.assignAdmin))
 	r.HandleFunc("/viewCommentReports", responder(s.viewCommentReports))
+	r.HandleFunc("/newReport", responder(s.newReport))
 
 	s.httpServer.Handler = s.router
 	s.router = r
