@@ -1,3 +1,6 @@
+3/17/2023 : Karl 
+- PostCommentReport, needed queries and routes, also added 2 default reports to the 2nd migration
+
 3/12/2023: Luke & Karl
 - Started pipeline for sending CommentReports
 
